# walmart-hr-chatbot

./: ANNOUNCEMENT_EMAIL_TEMPLATE.md  AZURE_SETUP_GUIDE.md  DEDICATED_SERVER_QUICK_START.txt  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DIY_SETUP_NO_IT_NEEDED.md  DOCKER_QUICKSTART.md  FALLBACK_UPDATE_SUMMARY.md  FAQ_UPDATE_GUIDE.md  IT_REQUEST_TEMPLATE.txt  LAX2_FAQ_REFERENCE.md  MOVE_TO_DEDICATED_SERVER.md  NO_IT_QUICK_START.txt  QUICK_SHARE_INSTRUCTIONS.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  SETUP_AND_SHARE.bat  SETUP_GUIDE.md  SHARING_MADE_EASY.txt  SIMPLE_DIY_CHECKLIST.txt  SIMPLE_SETUP.md  START_CHATBOT_SERVICE.bat  START_DOCKER.bat  START_FOR_SHARING.bat  START_HERE.md  STOP_DOCKER.bat  SUPER_SIMPLE_SETUP.md  UPDATE_CHATBOT_IP.bat  WALMART_SETUP.md  chatbot.html  chatbot.html.backup  docker-compose.yml  hr-chatbot-standalone.html  index.html  simple_chatbot.py  start_chatbot.bat  test_chatbot_api.py  test_chatbot_simple.py
backend/: Dockerfile  README.md  SWITCH_AI_PROVIDER.md  chatbot_service.py  chatbot_service_ollama.py  config.py  knowledge_base.py  main.py  models.py  pyproject.toml  test_faq_loading.py  test_main.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatContainer.tsx  ChatInput.tsx  FallbackBanner.tsx  Header.tsx  Message.tsx  MessageList.tsx
